
Bumped bibmanager version to 1.1.3.


***** Sun Jun 16 22:55:12 CEST 2019  *****

Updated docs, added tutorial and tweaked get-started text.


*****  Wed Jun 26 14:37:36 PDT 2019  *****

Fixed link in pypi long description.

*****

Updated docs, added api.

*****

Minor tweak in conf.py.

*****

Bumped bibmanager version to 1.1.4.

*****  Fr 12. Jul 14:59:28 CEST 2019  *****

Try to fix viewcode docs extension to show source code of api.

*****

More tweaks to docs/conf.py.

*****  Sat Jul 27 12:07:14 CEST 2019  *****

Updated url in help display.

*****

Minor tweaks/clean-up in the docs.

*****

Updated contributing.rst docs.

*****

Bumped bibmanager version to 1.1.5.


*****  Tue Aug 20 22:00:46 CEST 2019  *****

Grabbed PR #45 that removes cmdclass post-install functions
(which seemed to be causing troubles).
Replaced with a check that HOME folder exists.

Added bibmanager.__version__ as second element of pickled file
in bib_manager.save().

Added check between pickled file and bibm versions before CLI runs.
Update database when v_pickle < v_bibm.
Stop and recommend to update if v_bibm < v_pickle.

Implemented bib_manager.get_version() that gets the pickled file
version.
Tested and documented.

*****

Minor tweaks and cosmetics in config_manager.py.

*****

Updated API docs.

*****

Added packaging package to requirements.

*****

Rolled back tweak in config_manager.py.

*****

Bumped bibmanager version to 1.1.6.

The next merge removes the need for post-installation commands
and thus resolves #45 and #49
By the way, above where it says PR #45, should have been PR #46


*****  So 8. Sep 13:15:44 CEST 2019  *****

Moved first-ever initialization checks from config_manager.py
get() and set() function into the very beginning of the main().

*****

Updated some tests to make sure that they run on the mocked database.

*****

Added long_description_content_type into setup.py.


*****  Tue Dec 24 19:06:55 CLT 2019  *****

Some cosmetics edits in bib_manager.py
