@@ -1370,3 +1370,8 @@ Added long_description_content_type into setup.py.
 
 Some cosmetics edits in bib_manager.py
 
+*****
+
+Set explicitly the output of print_formatted_text() calls to stdout.
+This fixes the testing for prompt_toolkit versions 2 and 3.
+
